@@ -1,3 +1,7 @@
+2003-11-06	ujwal
+
+    * Fixed bug causing incorrect number of columns.
+
 2003-11-05	ujwal
 
     * Fixed resizing problems when toolbar visibility is toggled by overriding 
